增加节点搜索,优化弹窗位置,汉化

--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>ZooInspector v0.1</title>
 </head>
 <body>
-<p>ZooInspector was developed by Colin Goodheart-Smithe and is
-available under the Apache Software Licence v2.0.</p>
-<p>The Icons used were sourced from the Eclipse project (<a
-	href="http://www.eclipse.org">http://www.eclipse.org</a>) and licensed
-under the Eclipse Public Licence v1.0. [<a
+<p>ZooInspector由Colin Goodhart Smith开发，并在Apache软件许可证v2.0下提供。</p>
+<p>使用的图标来源于Eclipse项目 (<a href="http://www.eclipse.org">http://www.eclipse.org</a>) 并根据EclipsePublicLicense v1.0获得许可。 [<a
 	href="http://www.eclipse.org/org/documents/epl-v10.php">http://www.eclipse.org/org/documents/epl-v10.php</a>]
 </p>
-<p>ZooKeeper is available from <a
-	href="http://hadoop.apache.org/zookeeper/">http://hadoop.apache.org/zookeeper/</a>
-and is licensed under an Apache Software Licence v2.0</p>
-<p>The ApacheSoftware Licence v2.0 can be found at <a
-	href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
+<p>ZooKeeper可从以下网址获得：<a
+	href="http://hadoop.apache.org/zookeeper/">http://hadoop.apache.org/zookeeper/</a>并在Apache软件许可证v2.0下提供。</p>
+<p>ApacheSoftware License v2.0可在以下网址找到：<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
+<br>
+<p>本软件由<b>ZhangNing</b>基于ZooInspector基础上开发，优化弹窗,新增节点查询功能并汉化。</p>
+<p>项目Github地址: <a href="https://github.com/zhangning12138" target="_blank">https://github.com/zhangning12138</a></p>
 </body>
 </html>
